--- a/vignettes/tiling.Rmd
+++ b/vignettes/tiling.Rmd
@@ -70,7 +70,7 @@ orange <- grDevices::rgb(0.90, 0.60, 0.00)
 When we consider the background to be a triangle fill color we can straight-forwardly
 achieve several of the [uniform colorings of a triangular tiling](https://en.wikipedia.org/wiki/Triangular_tiling#Uniform_colorings) using the "convex3" shape with the "hex" grid.
 
-```{r}
+```{r, fig.alt = "Four different uniform colorings of a triangular tiling"}
 grid.triangular_tiling <- function(...) {
     grid.pattern_regular_polygon(..., shape = "convex3", density = 1, grid = "hex",
                                  spacing = 0.2, angle = 0, rot = 180)
@@ -110,7 +110,7 @@ add_borders()
 
 We can achieve the nine non-staggered [uniform colorings of a square tiling](https://en.wikipedia.org/wiki/Square_tiling#Uniform_colorings) using the "square" shape and the appropriate "type" (and perhaps "subtype").
 
-```{r}
+```{r, fig.alt = "Four different uniform colorings of a square tiling"}
 # 2 color uniform square tiling (1212)
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 gp <- gpar(fill = c(yellow, red), col = "black")
@@ -143,7 +143,7 @@ add_borders()
 
 We can achieve all the [uniform colorings of a hexagonal tiling](https://en.wikipedia.org/wiki/Hexagonal_tiling#Uniform_colorings) using the "convex6" shape with the "hex" grid and the appropriate "type".  Replacing the "convex6" shape with an appropriately scaled "star6" shape results in a uniform tiling using star polygons.
 
-```{r}
+```{r, fig.alt = "Four different uniform colorings of a hexagonal tiling"}
 grid.hexagonal_tiling <- function(..., shape = "convex6", spacing = 0.2) {
     scale <- star_scale(6, 30)
     grid.pattern_regular_polygon(..., shape = shape, density = 1, grid = "hex",
@@ -181,7 +181,7 @@ add_borders()
 
 We can achieve the [uniform colorings of a elongated triangular tiling](https://en.wikipedia.org/wiki/Elongated_triangular_tiling) using the "elongated_triangle" grid and the "convex4" and "convex3" shapes.
 
-```{r}
+```{r, fig.alt = "Three different uniform colorings of an elongated triangular tiling"}
 grid.elongated_triangular_tiling <- function(...) {
     grid.polygon(x_sq, y_sq, gp = gpar(fill = yellow, col = NA))
     grid.pattern_regular_polygon(..., shape = rep(c("convex4", "convex3"), each = 2), 
@@ -216,7 +216,7 @@ add_borders()
 
 We can achieve the two [uniform colorings of a snub square tiling](https://en.wikipedia.org/wiki/Snub_square_tiling) using a "star4" shape and a "convex4" shape.
 
-```{r}
+```{r, fig.alt = "Three different uniform colorings of a snub square tiling"}
 grid.snub_square <- function(..., gp_sq, gp_sq2 = gp_sq, gp_tri = gp_sq) {
     scale_star <- star_scale(4, 90 + 60, external = TRUE)
     grid.polygon(x_sq, y_sq, gp = gp_sq)
@@ -257,7 +257,7 @@ add_borders()
 We can achieve the two [uniform colorings of a truncated square tiling](https://en.wikipedia.org/wiki/Truncated_square_tiling#Uniform_colorings) using the "convex8" shape rotated 22.5 degrees.  Adding in an extra (possibly alternating) "star8" shape results in a uniform tiling using star polygons.
 
 
-```{r}
+```{r, fig.alt = "Four different uniform colorings of a truncated square tiling"}
 # 2 color uniform truncated square tiling
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 gp <- gpar(fill = red, col = NA)
@@ -309,7 +309,7 @@ add_borders()
 
 We can achieve a [truncated hexagonal tiling](https://en.wikipedia.org/wiki/Truncated_hexagonal_tiling) using the "convex12" shape with a 15 degree rotation in a "hex_circle" grid.  The related "star12" variations are fun tilings as well.
 
-```{r}
+```{r, fig.alt = "A truncated hexagonal tiling and a related 'star12' variation"}
 # 2 color uniform truncated hexagonal tiling
 grid.truncated_hexagonal_tiling <- function(..., shape = "convex12") {
     scale <- star_scale(12, 60, external = TRUE)
@@ -343,7 +343,7 @@ We can achieve one of the [uniform colorings of a trihexagonal tiling](https://e
 
 There are topologically equivalent tilings using the "star6", "star3", and "convex3" shapes that also provides an interesting tiling effect.
 
-```{r}
+```{r, fig.alt = "A trihexagonal tiling plus 'star6', 'star3', and 'convex3' variations"}
 grid.trihexagonal_tiling <- function(..., shape = "convex6", density = 1) {
     grid.pattern_regular_polygon(..., shape = shape, density = density, grid = "hex_circle",
                                  spacing = 0.2, rot = 30, angle = 0)
@@ -382,7 +382,7 @@ add_borders()
 
 We can achieve the one [uniform colorings of a snub (tri)hexagonal tiling](https://en.wikipedia.org/wiki/Snub_trihexagonal_tiling) using a "star6" shape and a "convex6" shape.
 
-```{r}
+```{r, fig.alt = "Three different colorings of a snub trihexagonal tiling"}
 grid.snub_trihexagonal <- function(..., gp_tri, gp_tri2 = gp_tri, gp_hex = gp_tri) {
     scale_star <- star_scale(6, 60 + 60, external = TRUE)
     grid.polygon(x_sq, y_sq, gp = gp_tri)
@@ -424,7 +424,7 @@ add_borders()
 
 By carefully using `grid.pattern_stripe()` it is possible to achieve the [truncated trihexagonal tiling](https://en.wikipedia.org/wiki/Truncated_trihexagonal_tiling).
 
-```{r}
+```{r, fig.alt = "Two different colorings of a truncated trihexagonal tiling"}
 # truncated trihexagonal
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 grid.polygon(x_sq, y_sq, gp = gpar(fill = yellow, col = NA))
@@ -466,7 +466,7 @@ add_borders()
 
 By carefully using `grid.pattern_stripe()` it is also possible to achieve the [rhombitrihexagonal tiling](https://en.wikipedia.org/wiki/Rhombitrihexagonal_tiling).  There are also variant tilings where we add in "star12" polygons.
 
-```{r}
+```{r, fig.alt = "Two different colorings of a rhombitrihexagonal tiling plus a 'star12' variation"}
 # rhombitrihexagonal
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 grid.polygon(x_sq, y_sq, gp = gpar(fill = yellow, col = NA))
@@ -529,7 +529,7 @@ add_borders()
 
 Some additional [uniform tilings with star polygons](https://en.wikipedia.org/wiki/Uniform_tiling#Uniform_tilings_using_star_polygons) not shown above.
 
-```{r}
+```{r, fig.alt = "Four uniform tilings with star polygons"}
 # 12.12.4*
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 grid.polygon(x_sq, y_sq, gp = gpar(fill = red, col = NA))
@@ -575,7 +575,7 @@ popViewport()
 add_borders()
 ```
 
-```{r}
+```{r, fig.alt = "Four more uniform tilings with star polygons"}
 # 3.6*.6**
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 grid.polygon(x_sq, y_sq, gp = gpar(fill = red, col = NA))
@@ -616,7 +616,7 @@ popViewport()
 add_borders()
 ```
 
-```{r}
+```{r, fig.alt = "Two more uniform tilings with star polygons"}
 # 18.18.3*
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 grid.polygon(x_sq, y_sq, gp = gpar(fill = blue, col = NA))
@@ -647,7 +647,7 @@ add_borders()
 
 We can achieve a [herringbone tiling](https://en.wikipedia.org/wiki/Herringbone_pattern) by using `grid.pattern_weave()` and particular "twill" weaves of the subtype "n/n(1)".
 
-```{r}
+```{r, fig.alt = "Four different herringbone tilings"}
 grid.herringbone_tiling <- function(..., subtype = "2/2(1)") {
     grid.pattern_weave(..., type = "twill", subtype = subtype, density = 1, 
                        spacing = 0.1, angle = 45)
@@ -683,7 +683,7 @@ add_borders()
 
 We can get a [Pythagorean tiling](https://en.wikipedia.org/wiki/Pythagorean_tiling) by setting a background color and rotating "convex4" shapes
 
-```{r}
+```{r, fig.alt = "Four different colorings of a Pythagorean tiling"}
 grid.pythagorean_tiling <- function(...) {
     grid.pattern_regular_polygon(..., shape = "convex4", density = 1.222, 
                                  rot = 15, spacing = 0.2, angle = -15)
@@ -723,7 +723,7 @@ add_borders()
 
 We can get a [rhombille tiling](https://en.wikipedia.org/wiki/Rhombille_tiling) by using the "rhombille_rhombus" shape:
 
-```{r}
+```{r, fig.alt = "Three different colorings of a rhombille tiling"}
 grid.rhombille_tiling <- function(gp1, gp2 = gp1, gp3 = gp2) {
     grid.pattern_regular_polygon(shape = "rhombille_rhombus", density = 1,
                        angle = 0, rot = -120, spacing = 0.2,
@@ -758,7 +758,7 @@ add_borders()
 
 We can get a [tetrakis square tiling](https://en.wikipedia.org/wiki/Tetrakis_square_tiling) by using the "tetrakis_left" and "tetrakis_right" shapes:
 
-```{r}
+```{r, fig.alt = "Four different colorings of a tetrakis square tiling"}
 grid.tetrakis_tiling <- function(gp1, gp2 = gp1, gp3 = gp2, gp4 = gp1) {
     grid.pattern_regular_polygon(shape = "tetrakis_left", density = 1, 
                                  angle = 0, rot=0, gp = gp1, spacing = 0.25)
@@ -806,7 +806,7 @@ add_borders()
 
 A rhombi may be produced by the "star2" shape:
 
-```{r}
+```{r, fig.alt = "Three different tilings using rhombi"}
 # 2*.2**.2*.2**
 pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
 sp <- 0.3
